[gd_scene load_steps=6 format=3 uid="uid://w4gm67bydod"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_vsdwt"]
[ext_resource type="Texture2D" uid="uid://dld5gwe03povq" path="res://UI/Images/MenuBackground2.PNG" id="2_4t21l"]
[ext_resource type="Texture2D" uid="uid://0esun8vk0q22" path="res://UI/Images/BackgroundBoardNoB.png" id="3_eoofo"]
[ext_resource type="Texture2D" uid="uid://b1tgm44fknjxm" path="res://UI/Images/BetterButton.png" id="4_m055q"]
[ext_resource type="Theme" uid="uid://jia55bt3fpaw" path="res://UI/MainMenuTheme.tres" id="4_xjwdx"]

[node name="MainMenu_CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_vsdwt")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="TextureRect2" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4t21l")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 629.0
offset_bottom = 1080.0
texture = ExtResource("3_eoofo")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1307.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons_VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SinglePlayer_TextureButton" type="TextureButton" parent="MarginContainer/Buttons_VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_m055q")
ignore_texture_size = true
stretch_mode = 5

[node name="SinglePLayer_Label" type="Label" parent="MarginContainer/Buttons_VBoxContainer/SinglePlayer_TextureButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -11.5
offset_right = 24.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_xjwdx")
text = "Single Player"

[node name="Multiplayer_TextureButton2" type="TextureButton" parent="MarginContainer/Buttons_VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_m055q")
ignore_texture_size = true
stretch_mode = 5

[node name="MultiPlayer_Label" type="Label" parent="MarginContainer/Buttons_VBoxContainer/Multiplayer_TextureButton2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_xjwdx")
text = "Multiplayer"

[node name="Quit_TextureButton3" type="TextureButton" parent="MarginContainer/Buttons_VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_m055q")
ignore_texture_size = true
stretch_mode = 5

[node name="Quit_Label" type="Label" parent="MarginContainer/Buttons_VBoxContainer/Quit_TextureButton3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_xjwdx")
text = "Quit"

[connection signal="pressed" from="MarginContainer/Buttons_VBoxContainer/SinglePlayer_TextureButton" to="." method="_on_single_player_texture_button_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons_VBoxContainer/Multiplayer_TextureButton2" to="." method="_on_multiplayer_texture_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons_VBoxContainer/Quit_TextureButton3" to="." method="_on_quit_texture_button_3_pressed"]
